Add --enable-native-access=ALL-UNNAMED to SynchronizedNative.java